# CG

./: Makefile  README.md  generator.cpp  generator.h  main_gen.cpp
Aula10/: main.cpp
Aula11/: CMakeCache.txt  Makefile  class11  cmake_install.cmake  main.cpp
Aula12/: CMakeCache.txt  Makefile  class12  cmake_install.cmake  main.cpp
Aula5/: main.cpp
Aula6/: main.cpp
Aula7/: CMakeCache.txt  Makefile  class7  cmake_install.cmake  main.cpp
Aula8/: catmull-rom.cpp
Aula9/: main.cpp
GeneratorSrc/: Generator  Makefile  generator.cpp  generator.hpp  main_gen.cpp
Projecto/: CMakeCache.txt  CMakeLists.txt  Engine  Engine.cbp  Generator  Makefile  box.3d  cmake_install.cmake  cone.3d  demo.xml  earth.3d  generate solar_system  gssbackup  main.cpp  mercury.3d  moon.3d  neptune.3d  plane.3d  saturn.3d  solar_system.xml  solar_system_static.xml  sphere.3d  teapot.patch  teapot.patch.3d
Projecto/engineSrc/: engineSrcAUX.cpp  engineSrcAUX.h  engineSrcClass.cpp  engineSrcClass.h  readXMLAUX.cpp  readXMLAUX.h
Projecto/generatorSrc/: generator.cpp  generator.h  generator.hpp  main.cpp  main_gen.cpp
Projecto/readXML/: readXMLAUX.cpp  readXMLAUX.h  readXMLAUX.hpp  readXMLClass.cpp  readXMLClass.h
Projecto/xcode/: CMakeCache.txt  cmake_install.cmake
Projecto/xcode/CMakeScripts/: ReRunCMake.make
Projecto/xcode/Debug/: Engine  Generator  sphereR.3d
Projecto/xcode/Engine.xcodeproj/: project.pbxproj
Projecto/xcode/Engine.xcodeproj/project.xcworkspace/xcuserdata/joao.xcuserdatad/: UserInterfaceState.xcuserstate
Projecto/xcode/Engine.xcodeproj/xcshareddata/xcschemes/: ALL_BUILD.xcscheme  Engine.xcscheme
Projecto/xcode/Engine.xcodeproj/xcuserdata/joao.xcuserdatad/xcschemes/: xcschememanagement.plist
TP3/: CMakeLists.txt  main.cpp  readXMLAUX.cpp  readXMLAUX.hpp
Teste/: Engine  (+10 more)
(+32 files in other folders)
